# UAV-UGV-Co-Simulation-Relay

./: .gitattributes  README.md  效果演示.webm
MATLAB_ws/Matlab_file/: Factory.m  Lab1_UAV-UAV.m  Lab2_UGV1.m  Lab2_UGV2.m  Lab3.m  test.xlsx  uav_ID.m  uav_initpoint_2point_closeloop.m  uav_px4_recieve.m  uav_px4_takeoff.m  uav_takeoff.m  uav_timer_2point.m  uav_to_2point_closeloop.m  uav_to_2point_openloop.m  ugv_2car.m  ugv_TB3_1_square.m  ugv_TB3_1_square_continue.m  ugv_TB3_1_to_point.m
ROS2_ws/src/navigation/: package.xml  setup.py
ROS2_ws/src/navigation/config/: nav2_params.yaml
ROS2_ws/src/navigation/launch/: 1uav_2ugv.launch.py  gazebo_multi_nav2_world.launch.py  iris_car.launch.py  px4.launch.py
ROS2_ws/src/navigation/launch/nav2_bringup/: bringup_launch.py  localization_launch.py  navigation_launch.py  slam_launch.py
ROS2_ws/src/navigation/maps/: Factory.pgm  Factory.yaml  room.pgm  room.yaml
ROS2_ws/src/navigation/models/Factory/: Factory.dae  model.config  model.sdf
ROS2_ws/src/navigation/models/ground/: ground.dae  model.sdf
ROS2_ws/src/navigation/models/turtlebot3_burger/: model.sdf
ROS2_ws/src/navigation/rviz/: multi_nav2_default_view.rviz
ROS2_ws/src/navigation/worlds/: CarMap.world  Factory.world
